ISSUE: MCZ Redmine 868 PURPOSE: Allow code to run with java 8  DESCRIPTION: Replacing Java 9 List.of() with Arrays.asList(new String[]{}) construct.